[package]
name = "kewlerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
anyhow = "1.0.62"
serde = {version = "1.0.144", features = ["derive"]}
toml = "0.5.9"
sha2 = "0.10"
bson = "2.4.0"
hex-literal = "0.3.4"